# System-Monitor

./: .gitignore  CMakeLists.txt  README.md
include/: Parser.h  linux_parser.h  macos_parser.h  process.h  processor.h  system.h
src/: format.cpp  linux_parser.cpp  macos_parser.cpp  main.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
